--- a/styles1.css
+++ b/styles1.css
@@ -7,7 +7,8 @@ body {
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-color: skyblue; /* Change the background color to sky blue */
+    background: radial-gradient(white, lightblue);
+; /* Change the background color to sky blue */
 }
 
 #logo {
